--- a/pcg/Views/User/Sites.cshtml
+++ b/pcg/Views/User/Sites.cshtml
@@ -16,8 +16,7 @@
 <table class="table table-hover table-responsive-sm table-sm">
     <thead>
         <tr>
-            <th class="text-center text-uppercase">Client</th>
-            <th class="text-center text-uppercase">Site</th>
+            <th class="text-center text-uppercase">Client/Site</th>
             <th class="text-center text-uppercase">OM</th>
             <th class="text-center text-uppercase"> SC/TK</th>
             <th class="text-center text-uppercase">Details</th>
@@ -27,8 +26,7 @@
         @foreach (System.Data.DataRow dr in ViewBag.Sitelist.Rows)
         {
         <tr>
-            <td class="text-center text-nowrap">@dr["Client"].ToString()</td>
-            <td class="text-center text-nowrap">@dr["Site"].ToString()</td>
+                <td class="text-center text-nowrap">@dr["Client"].ToString() @dr["Site"].ToString()</td>
                 <td class="text-center text-nowrap">@dr["OMName"].ToString()@dr["SOMName"].ToString()</td>
                 <td class="text-center text-nowrap">@dr["SCName"].ToString()@dr["TKName"].ToString()</td>
             <td class="text-center text-nowrap">
