--- a/pcg/Views/Admin/Forwarded.cshtml
+++ b/pcg/Views/Admin/Forwarded.cshtml
@@ -20,7 +20,7 @@
             <th class="text-center text-uppercase">Date Forwarded</th>
             <th class="text-center text-uppercase">Date Received</th>
             <th class="text-center text-uppercase">Assignee</th>
-            <th class="text-center text-uppercase">Approve</th>
+            <th class="text-center text-uppercase">Action</th>
         </tr>
     </thead>
     <tbody id="myTable">
