--- a/pcg/Views/Admin/MyTask.cshtml
+++ b/pcg/Views/Admin/MyTask.cshtml
@@ -147,7 +147,7 @@
                                                 <tbody>
                                                     <tr>
                                                         <td class="text-center text-nowrap">@dr["TaskId"].ToString()</td>
-                                                        <td class="text-center text-nowrap">@dr["Task"].ToString() @dr["Remarks"].ToString() @dr["Description"].ToString()</td>
+                                                            <td class="text-center text-nowrap">@dr["Task"].ToString() <br/> @dr["Remarks"].ToString() <br/> @dr["Description"].ToString()</td>
                                                     </tr>
                                                 </tbody>
                                             </table>
