--- a/pcg/Views/User/TaskDetail.cshtml
+++ b/pcg/Views/User/TaskDetail.cshtml
@@ -35,7 +35,7 @@
                 <td class="text-center text-nowrap">@dr["DateFwd"].ToString()</td>
                 <td class="text-center text-nowrap">@dr["DateRcv"].ToString()</td>
                 <td class="text-center text-nowrap">@dr["Name"].ToString()</td>
-                <td>Waiting approval</td>
+                <td class="text-center text-nowrap">@dr["Status"].ToString()</td>
         </tr>
         }
     </tbody>
