--- a/pcg/Views/Admin/Pending.cshtml
+++ b/pcg/Views/Admin/Pending.cshtml
@@ -3,12 +3,12 @@
 @{
     ViewData["Title"] = "Task Approval";
 }
-<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <head>
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.15.2/css/selectize.bootstrap5.css">
 </head>
 <h1 style="text-align:center">Task Approval</h1>
 <table class="table table-hover table-responsive-sm table-sm">
@@ -40,8 +40,8 @@
                 <td>
                     @if (dr["Status"].ToString() == "Waiting")
                     {
-                    <div class="d-flex justify-content-between">
-                        <form id="approveForm-@dr["TaskID_Tasks"]" class="approve-form" asp-controller="Admin" asp-action="Approve" method="post">
+                        <div class="d-flex justify-content-center">
+                            <form id="approveForm-@dr["TaskID_Tasks"]" class="approve-form mr-2" asp-controller="Admin" asp-action="Approve" method="post">
                             <input type="hidden" asp-for="TaskId" value="@dr["TaskID_Tasks"].ToString()" />
                             <input type="hidden" asp-for="AssignId" value="@dr["AssignId"].ToString()" />
                             <input type="hidden" asp-for="FwdId" value="@dr["ForwardId"].ToString()" />
@@ -50,7 +50,6 @@
                             <input type="hidden" asp-for="Code" value="@dr["Code"].ToString()" />
                             <button type="button" class="btn btn-primary confirm-button">Approve</button>
                         </form>
-                        <div class="mx-1"></div>
                         <form id="declineForm-@dr["TaskID_Tasks"]" class="decline-form" asp-controller="Admin" asp-action="Decline" method="post">
                             <input type="hidden" asp-for="TaskId" value="@dr["TaskID_Tasks"].ToString()" />
                             <input type="hidden" asp-for="AssignId" value="@dr["AssignId"].ToString()" />
@@ -64,15 +63,48 @@
                     }
                     else
                     {
-                        <form id="approveForm-@dr["TaskID_Tasks"]" class="approve-form" asp-controller="Admin" asp-action="Approve" method="post">
-                            <input type="hidden" asp-for="TaskId" value="@dr["TaskID_Tasks"].ToString()" />
-                            <input type="hidden" asp-for="AssignId" value="@dr["AssignId"].ToString()" />
-                            <input type="hidden" asp-for="FwdId" value="@dr["ForwardId"].ToString()" />
-                            <input type="hidden" asp-for="Task" value="@dr["Task"].ToString()" />
-                            <input type="hidden" asp-for="Remarks" value="@dr["Remarks"].ToString()" />
-                            <input type="hidden" asp-for="Code" value="@dr["Code"].ToString()" />
-                            <button type="button" class="btn btn-primary confirm-button">Approve</button>
-                        </form>
+                        <div class="modal fade" id="papprove_@dr["TaskID_Tasks"]" tabindex="-1" aria-labelledby="papprove_@dr["TaskID_Tasks"]Label" aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h1 class="modal-title fs-5" id="papprove_@dr["TaskID_Tasks"]Label">Select Assignee</h1>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                    </div>
+                                    <form id="approveForm-@dr["TaskID_Tasks"]" class="approve-form" asp-controller="Admin" asp-action="Approve" method="post">
+                                    <div class="modal-body">
+                                            <div asp-validation-summary="All" class="text-danger"></div>
+                                            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                                            <div class="form-group">
+                                                    <label asp-for="AssignId" class="control-label">Assignee</label>
+                                                    <select asp-for="AssignId" class="form-control" >
+                                                        @foreach (System.Data.DataRow dar in ViewBag.Users.Rows)
+                                                        {
+                                                        <option value="@dar["Id"].ToString()">@dar["Name"].ToString(): @dar["Position"].ToString()</option>
+                                                        }
+                                                    </select>
+                                            </div>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <div class="d-flex justify-content-center">
+                                            <input type="hidden" asp-for="TaskId" value="@dr["TaskID_Tasks"].ToString()" />
+                                            <input type="hidden" asp-for="FwdId" value="@dr["ForwardId"].ToString()" />
+                                            <input type="hidden" asp-for="Task" value="@dr["Task"].ToString()" />
+                                            <input type="hidden" asp-for="Remarks" value="@dr["Remarks"].ToString()" />
+                                            <input type="hidden" asp-for="Code" value="@dr["Code"].ToString()" />
+                                            <input type="hidden" asp-for="Status" value="@dr["Status"].ToString()" />
+                                            <button type="button" class="btn btn-primary confirm-button">Approve</button>
+                                        </div>
+                                    </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="d-flex justify-content-center">
+                        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#papprove_@dr["TaskID_Tasks"]">
+                            Approve
+                        </button>
+                        </div>
                     }
                 </td>
             </tr>
@@ -86,15 +118,13 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="confirmModalLabel">Confirm Action</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
                 Are you sure you want to approve this task?
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
                 <button type="button" id="confirm" class="btn btn-primary">Yes</button>
             </div>
         </div>
@@ -106,21 +136,22 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="declineModalLabel">Confirm Decline</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
                 Are you sure you want to decline this task?
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
                 <button type="button" id="confirmDecline" class="btn btn-danger">Yes</button>
             </div>
         </div>
     </div>
 </div>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.15.2/js/selectize.min.js"></script>
 <script>
     $(document).ready(function() {
         $(".confirm-button").click(function() {
