--- a/pcg/Views/User/Index.cshtml
+++ b/pcg/Views/User/Index.cshtml
@@ -7,14 +7,23 @@
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
 </head>
-<div class="text-center">
-    <div>
-        <h1 class="display-4">@Model.Stringa</h1>
+<div class="d-flex justify-content-center">
+    @if (ViewBag.Pending != null && ViewBag.Pending.Rows.Count > 0)
+            {
+    <div class="card" style="width: 18rem;">
+        <div class="card-body">
+            
+            @foreach (System.Data.DataRow dr in ViewBag.Pending.Rows)
+            {
+                <h5 class="card-title">New Pending</h5>
+                <h6 class="card-subtitle mb-2 text-body-secondary">Task: @dr["Task"].ToString() @dr["Remarks"].ToString() @dr["Description"].ToString()</h6>
+                <a class="btn btn-primary btn-block" asp-controller="User" asp-action="Pending">Pending</a>
+            }   
+        </div>
     </div>
-    <div>
-        <h1 class="display-4">@Model.Stringb</h1>
-    </div>
-    <div>
-        <h1 class="display-4">@Model.Stringc</h1>
-    </div>
+            }
+    else
+    {
+        <h1>WELCOME @ViewData["SessionName"]</h1>
+    }
 </div>
