--- a/pcg/Views/Admin/Pending.cshtml
+++ b/pcg/Views/Admin/Pending.cshtml
@@ -1,22 +1,22 @@
 ﻿@model pcg.Models.ProcessModel
 
 @{
-    ViewData["Title"] = "Task Approval";
+    ViewData["Title"] = "For Approval";
 }
 <head>
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.15.2/css/selectize.bootstrap5.min.css">
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.15.2/css/selectize.bootstrap5.css">
+    <link rel="stylesheet" href="~/css/custom.css" />
 </head>
-<h1 style="text-align:center">Task Approval</h1>
-<table class="table table-hover table-responsive-sm table-sm">
+<h1 style="text-align:center">For Approval</h1>
+<table class="ctable ctable-hover ctable-responsive-sm ctable-sm">
     <thead>
         <tr>
             <th class="text-center text-uppercase">Task No.</th>
             <th class="text-center text-uppercase">Task</th>
-            <th class="text-center text-uppercase">Remarks</th> 
             <th class="text-center text-uppercase">Description</th>
             <th class="text-center text-uppercase">Client/Site</th>
             <th class="text-center text-uppercase">Added By</th>
@@ -31,7 +31,6 @@
             <tr>
                 <td class="text-center text-nowrap">@dr["TaskID_Tasks"].ToString()</td>
                 <td class="text-center text-nowrap">@dr["Task"].ToString()</td>
-                <td class="text-center text-nowrap">@dr["Remarks"].ToString()</td>
                 <td class="text-center text-nowrap">@dr["Description"].ToString()</td>
                 <td class="text-center text-nowrap">@dr["Client"].ToString() @dr["Site"].ToString()</td>
                 <td class="text-center text-nowrap">@dr["AddedBy"].ToString()</td>
@@ -41,25 +40,21 @@
                     @if (dr["Status"].ToString() == "Waiting")
                     {
                         <div class="d-flex justify-content-center">
+                            <div>
                             <form id="approveForm-@dr["TaskID_Tasks"]" class="approve-form mr-2" asp-controller="Admin" asp-action="Approve" method="post">
-                            <input type="hidden" asp-for="TaskId" value="@dr["TaskID_Tasks"].ToString()" />
-                            <input type="hidden" asp-for="AssignId" value="@dr["AssignId"].ToString()" />
-                            <input type="hidden" asp-for="FwdId" value="@dr["ForwardId"].ToString()" />
-                            <input type="hidden" asp-for="Task" value="@dr["Task"].ToString()" />
-                            <input type="hidden" asp-for="Remarks" value="@dr["Remarks"].ToString()" />
-                            <input type="hidden" asp-for="Code" value="@dr["Code"].ToString()" />
-                            <button type="button" class="btn btn-primary confirm-button">Approve</button>
-                        </form>
-                        <form id="declineForm-@dr["TaskID_Tasks"]" class="decline-form" asp-controller="Admin" asp-action="Decline" method="post">
-                            <input type="hidden" asp-for="TaskId" value="@dr["TaskID_Tasks"].ToString()" />
-                            <input type="hidden" asp-for="AssignId" value="@dr["AssignId"].ToString()" />
-                            <input type="hidden" asp-for="FwdId" value="@dr["ForwardId"].ToString()" />
-                            <input type="hidden" asp-for="Task" value="@dr["Task"].ToString()" />
-                            <input type="hidden" asp-for="Remarks" value="@dr["Remarks"].ToString()" />
-                            <input type="hidden" asp-for="Code" value="@dr["Code"].ToString()" />
-                            <button type="button" class="btn btn-danger decline-confirm-button">Decline</button>
-                        </form>
-                    </div>
+                                <input type="hidden" asp-for="TaskId" value="@dr["TaskID_Tasks"].ToString()" />
+                                <input type="hidden" asp-for="AssignId" value="@dr["AssignId"].ToString()" />
+                                <input type="hidden" asp-for="FwdId" value="@dr["ForwardId"].ToString()" />
+                                <input type="hidden" asp-for="Task" value="@dr["Task"].ToString()" />
+                                <input type="hidden" asp-for="Details" value="@dr["Details"].ToString()" />
+                                <input type="hidden" asp-for="Code" value="@dr["Code"].ToString()" />
+                                <button type="button" style="height: 25px; line-height: 12px;" class="btn btn-primary confirm-button">Approve</button>
+                            </form>
+                            </div>
+                            <div>
+                            <button id="decline_@dr["TaskID_Tasks"]" data-taskid="@dr["TaskID_Tasks"].ToString()" type="button" style="height: 25px; line-height: 12px;" class="btn btn-danger decline-confirm-button">Decline</button>
+                            </div>
+                        </div>
                     }
                     else
                     {
@@ -89,10 +84,10 @@
                                             <input type="hidden" asp-for="TaskId" value="@dr["TaskID_Tasks"].ToString()" />
                                             <input type="hidden" asp-for="FwdId" value="@dr["ForwardId"].ToString()" />
                                             <input type="hidden" asp-for="Task" value="@dr["Task"].ToString()" />
-                                            <input type="hidden" asp-for="Remarks" value="@dr["Remarks"].ToString()" />
+                                            <input type="hidden" asp-for="Details" value="@dr["Details"].ToString()" />
                                             <input type="hidden" asp-for="Code" value="@dr["Code"].ToString()" />
                                             <input type="hidden" asp-for="Status" value="@dr["Status"].ToString()" />
-                                            <button type="button" class="btn btn-primary confirm-button">Approve</button>
+                                            <button type="button" style="height: 25px; line-height: 12px;" class="btn btn-primary confirm-button">Approve</button>
                                         </div>
                                     </div>
                                     </form>
@@ -101,9 +96,10 @@
                         </div>
 
                         <div class="d-flex justify-content-center">
-                        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#papprove_@dr["TaskID_Tasks"]">
-                            Approve
-                        </button>
+                            <button type="button" style="height: 25px; line-height: 12px;" class="btn btn-primary mr-2" data-bs-toggle="modal" data-bs-target="#papprove_@dr["TaskID_Tasks"]">
+                                Approve
+                            </button>
+                            <button id="decline_@dr["TaskID_Tasks"]" data-taskid="@dr["TaskID_Tasks"].ToString()" type="button" style="height: 25px; line-height: 12px;" class="btn btn-danger decline-confirm-button">Decline</button>
                         </div>
                     }
                 </td>
@@ -111,7 +107,6 @@
         }
     </tbody>
 </table>
-
 
 <div class="modal fade" id="confirmModal" tabindex="-1" role="dialog" aria-labelledby="confirmModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
@@ -131,25 +126,23 @@
     </div>
 </div>
 
-<div class="modal fade" id="declineModal" tabindex="-1" role="dialog" aria-labelledby="declineModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
+<div id="declineModal" class="modal fade" tabindex="-1" aria-labelledby="declineModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="declineModalLabel">Confirm Decline</h5>
+                <h5 class="modal-title" id="declineModalLabel">Decline Task</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                Are you sure you want to decline this task?
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                <button type="button" id="confirmDecline" class="btn btn-danger">Yes</button>
+                <!-- Decline modal -->
             </div>
         </div>
     </div>
 </div>
 
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.7/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.15.2/js/selectize.min.js"></script>
 <script>
@@ -162,12 +155,23 @@
             $("#confirmModal").modal("show");
         });
 
-        $(".decline-confirm-button").click(function() {
-            var form = $(this).closest(".decline-form");
-            $("#confirmDecline").off("click").on("click", function() {
-                form.submit();
+        $('button[id^="decline_"]').click(function () {
+            var $button = $(this);
+            var taskId = $button.data('taskid');
+            var url = '/Admin/Decline?taskId=' + encodeURIComponent(taskId);
+
+            console.log(taskId);
+            $.ajax({
+                url: url,
+                type: 'GET',
+                success: function (data) {
+                    $('#declineModal .modal-body').html(data);
+                    $('#declineModal').modal('show');
+                },
+                error: function () {
+                    alert('Failed to load content.');
+                }
             });
-            $("#declineModal").modal("show");
         });
     });
 </script>
