--- a/pcg/Views/Admin/Sites.cshtml
+++ b/pcg/Views/Admin/Sites.cshtml
@@ -32,7 +32,7 @@
                                     <label asp-for="Site" class="control-label">Site</label>
                                     <input asp-for="Site" class="form-control" />
                                 </div>
-                                <div style="display: flex; justify-content: center;">
+                                @*<div style="display: flex; justify-content: center;">
                                     <div style="margin-right: 20%;">
                                         <input class="form-check-input" type="radio" name="somom" id="som" value="som" style="transform: scale(1.5);" checked onchange="togglesomom('somdiv','omdiv','som')">
                                         <label class="form-check-label" id="somlabel" for="som">SOM</label>
@@ -41,8 +41,8 @@
                                         <input class="form-check-input" type="radio" name="somom" id="om" value="om" style="transform: scale(1.5);" onchange="togglesomom('omdiv','somdiv','om')">
                                         <label class="form-check-label" id="omlabel" for="om">OM</label>
                                     </div>
-                                </div>
-                                <div class="form-group" id="omdiv" style="display: none;">
+                                </div>*@
+                                <div class="form-group" id="omdiv" style="display: block;">
                                     <label asp-for="SiteOM" class="control-label">Operation Manager</label>
                                     <select id="siteom" asp-for="SiteOM" class="form-control">
                                         @foreach (System.Data.DataRow dr in ViewBag.Userlist.Rows)
@@ -149,7 +149,7 @@
         {
             <tr class="row-click" onclick="toggleRows(this)">
                 <td class="text-center text-nowrap">@dr["Client"].ToString() @dr["Site"].ToString()</td>
-                <td class="text-center text-nowrap">@dr["SOM"].ToString()@dr["OM"].ToString()</td>
+                <td class="text-center text-nowrap">@dr["SOM"].ToString()/@dr["OM"].ToString()</td>
                 <td class="text-center text-nowrap">@dr["SC"].ToString()@dr["TK"].ToString()</td>
                 <td class="text-center text-nowrap">         
                     <div style="text-align:center">
@@ -194,16 +194,16 @@
         }
     }
 
-    const somdiv = document.getElementById("somdiv");
-    const omdiv = document.getElementById("omdiv");
+    // const somdiv = document.getElementById("somdiv");
+    // const omdiv = document.getElementById("omdiv");
     const scdiv = document.getElementById("scdiv");
     const tkdiv = document.getElementById("tkdiv");
-    const selsom = document.getElementById("sitesom");
-    const selom = document.getElementById("siteom");
+    // const selsom = document.getElementById("sitesom");
+    // const selom = document.getElementById("siteom");
     const selsc = document.getElementById("sitesc");
     const seltk = document.getElementById("sitetk");
-    const somlabel = document.getElementById("somlabel");
-    const omlabel = document.getElementById("omlabel");
+    // const somlabel = document.getElementById("somlabel");
+    // const omlabel = document.getElementById("omlabel");
     const sclabel = document.getElementById("sclabel");
     const tklabel = document.getElementById("tklabel");
 
@@ -211,40 +211,40 @@
         preload();
     }
     function preload() {
-        somdiv.style.display = "block";
-        omdiv.style.display = "none";
+        @*somdiv.style.display = "block";
+        omdiv.style.display = "none";*@
         scdiv.style.display = "block";
         tkdiv.style.display = "none";
-        selsom.value = selsom.options[0].value;
-        selom.value = null;
+        // selsom.value = selsom.options[0].value;
+        // selom.value = null;
         selsc.value = selsc.options[0].value;
         seltk.value = null;
-        somlabel.style.fontWeight = "bold";
-        omlabel.style.fontWeight = "normal";
+        // somlabel.style.fontWeight = "bold";
+        // omlabel.style.fontWeight = "normal";
         sclabel.style.fontWeight = "bold";
         tklabel.style.fontWeight = "normal";
     }
 
-    function togglesomom(show, hide, select) {
-        var show = document.getElementById(show);
-        var hide = document.getElementById(hide);
+    // function togglesomom(show, hide, select) {
+    //     var show = document.getElementById(show);
+    //     var hide = document.getElementById(hide);
 
-        show.style.display = "block";
-        hide.style.display = "none";
+    //     show.style.display = "block";
+    //     hide.style.display = "none";
 
-        if (select === "som") {
-            document.getElementById("siteom").value = null;
-            document.getElementById("sitesom").value = document.getElementById("sitesom").options[0].value;
-            document.getElementById("somlabel").style.fontWeight = "bold";
-            document.getElementById("omlabel").style.fontWeight = "normal";
-        }
-        if (select === "om") {
-            document.getElementById("siteom").value = document.getElementById("siteom").options[0].value;
-            document.getElementById("sitesom").value = null;
-            document.getElementById("somlabel").style.fontWeight = "normal";
-            document.getElementById("omlabel").style.fontWeight = "bold";
-        }
-    }
+    //     if (select === "som") {
+    //         document.getElementById("siteom").value = null;
+    //         document.getElementById("sitesom").value = document.getElementById("sitesom").options[0].value;
+    //         document.getElementById("somlabel").style.fontWeight = "bold";
+    //         document.getElementById("omlabel").style.fontWeight = "normal";
+    //     }
+    //     if (select === "om") {
+    //         document.getElementById("siteom").value = document.getElementById("siteom").options[0].value;
+    //         document.getElementById("sitesom").value = null;
+    //         document.getElementById("somlabel").style.fontWeight = "normal";
+    //         document.getElementById("omlabel").style.fontWeight = "bold";
+    //     }
+    // }
 
     function togglesctk(show, hide, select) {
         var show = document.getElementById(show);
