--- a/pcg/Views/User/ChangeInfo.cshtml
+++ b/pcg/Views/User/ChangeInfo.cshtml
@@ -35,7 +35,7 @@
         <input asp-for="Confirm" type="password" class="form-control"/>
     </div>
     <div class="form-group">
-        <input type="submit" value="Update Info" asp-action="ChangeInfo" class="btn btn-primary" />
+                <input type="submit" value="Update Info" asp-action="ChangeInfo" class="btn btn-primary btn-block"/>
     </div>
         </form>
     </div>
