--- a/pcg/Views/User/Pending.cshtml
+++ b/pcg/Views/User/Pending.cshtml
@@ -20,7 +20,6 @@
         <tr>
             <th class="text-center text-uppercase">Task No.</th>
             <th class="text-center text-uppercase">Task</th>
-            <th class="text-center text-uppercase">Remarks</th>
             <th class="text-center text-uppercase">Description</th>
             <th class="text-center text-uppercase">Client/Site</th>
             <th class="text-center text-uppercase">Added By</th>
@@ -35,7 +34,6 @@
             <tr>
                 <td class="text-center text-nowrap">@dr["TaskId"].ToString()</td>
                 <td class="text-center text-nowrap">@dr["Task"].ToString()</td>
-                <td class="text-center text-nowrap">@dr["Remarks"].ToString()</td>
                 <td class="text-center text-nowrap">@dr["Description"].ToString()</td>
                 <td class="text-center text-nowrap">@dr["Client"].ToString() @dr["Site"].ToString()</td>
                 <td class="text-center text-nowrap">@dr["AddedBy"].ToString()</td>
@@ -49,7 +47,7 @@
                                 <div class="modal-content">
                                     <div class="modal-header">
                                         <h5 class="modal-title" id="ApproveModalLabel_@dr["TaskId"]">Confirm Approve</h5>
-                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close" onclick="cancelApprove('@dr["TaskId"].ToString()')">
+                                        <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close" onclick="cancelApprove('@dr["TaskId"].ToString()')">
                                             <span aria-hidden="true">&times;</span>
                                         </button>
                                     </div>
@@ -61,11 +59,11 @@
                                             <input type="hidden" asp-for="TaskId" value="@dr["TaskId"].ToString()" />
                                             <input type="hidden" asp-for="AssignId" value="@dr["AssignId"].ToString()" />
                                             <input type="hidden" asp-for="Task" value="@dr["Task"].ToString()" />
-                                            <input type="hidden" asp-for="Remarks" value="@dr["Remarks"].ToString()" />
+                                            <input type="hidden" asp-for="Details" value="@dr["Details"].ToString()" />
                                             <input type="hidden" asp-for="Process" value="@dr["Code"].ToString()" />
                                             <button type="button" class="btn btn-primary" onclick="confirmApprove('@dr["TaskId"].ToString()')">Approve</button>
                                         </form>
-                                        <button type="button" class="btn btn-secondary" data-dismiss="modal" onclick="cancelApprove('@dr["TaskId"].ToString()')">Cancel</button>
+                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" onclick="cancelApprove('@dr["TaskId"].ToString()')">Cancel</button>
                                     </div>
                                 </div>
                             </div>
@@ -76,7 +74,7 @@
                                 <div class="modal-content">
                                     <div class="modal-header">
                                         <h5 class="modal-title" id="DeclineModalLabel_@dr["TaskId"]">Confirm Decline</h5>
-                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
                                             <span aria-hidden="true">&times;</span>
                                         </button>
                                     </div>
@@ -88,10 +86,10 @@
                                             <input type="hidden" asp-for="TaskId" value="@dr["TaskId"].ToString()" />
                                             <input type="hidden" asp-for="AssignId" value="@dr["AssignId"].ToString()" />
                                             <input type="hidden" asp-for="Task" value="@dr["Task"].ToString()" />
-                                            <input type="hidden" asp-for="Remarks" value="@dr["Remarks"].ToString()" />
+                                            <input type="hidden" asp-for="Details" value="@dr["Details"].ToString()" />
                                             <input type="hidden" asp-for="Process" value="@dr["Code"].ToString()" />
                                         </form>
-                                        <button type="button" onclick="cancelDecline('@dr["TaskId"].ToString()')" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                                        <button type="button" onclick="cancelDecline('@dr["TaskId"].ToString()')" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
                                         <button type="button" onclick="confirmDecline('@dr["TaskId"].ToString()')" class="btn btn-danger">Yes</button>
                                     </div>
                                 </div>
