--- a/pcg/Views/User/Sites.cshtml
+++ b/pcg/Views/User/Sites.cshtml
@@ -48,8 +48,8 @@
                                                     <input asp-for="Task" class="form-control"/>
                                                 </div>                      
                                                 <div class="form-group">
-                                                    <label asp-for="Remarks" class="control-label">Remarks</label>
-                                                    <input asp-for="Remarks" class="form-control"/>
+                                                    <label asp-for="Details" class="control-label">Details</label>
+                                                    <textarea asp-for="Details" class="form-control"></textarea>                                                
                                                 </div>
                                                 <div class="form-group">
                                                     <label asp-for="Description" class="control-label"></label>
