--- a/pcg/Views/User/TaskDetail.cshtml
+++ b/pcg/Views/User/TaskDetail.cshtml
@@ -1,4 +1,4 @@
-﻿@model pcg.Models.VariationModel
+﻿@model pcg.Models.ProcessModel
 
 @{
     ViewData["Title"] = "Task Detail";
@@ -7,9 +7,12 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.15.2/css/selectize.bootstrap5.min.css">
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/css/custom.css" />
 </head>
 <h1 style="text-align:center">Task Details</h1>
-<table class="table table-hover table-responsive-sm table-sm">
+<table class="ctable ctable-hover ctable-responsive-sm ctable-sm" style="width: 100%; white-space: nowrap;">
     <thead>
         <tr>
             <th class="text-center text-uppercase">Task No.</th>
@@ -21,22 +24,58 @@
             <th class="text-center text-uppercase">Date Received</th>
             <th class="text-center text-uppercase">Assigned To</th>
             <th class="text-center text-uppercase">Status</th>
+            <th class="text-center text-uppercase">Action</th>
         </tr>
     </thead>
     <tbody id="myTable">
         @foreach (System.Data.DataRow dr in ViewBag.Tasklog.Rows)
         {
             <tr>
-                <td class="text-center text-nowrap">@dr["TaskID_Tasks"].ToString()</td>
+                <td class="text-center text-nowrap">@dr["TaskId"].ToString()</td>
                 <td class="text-center text-nowrap">@dr["Task"].ToString()</td>
-                <td class="text-center text-nowrap">@dr["Remarks"].ToString()</td>
+                <td class="text-center text-nowrap">@dr["Details"].ToString()</td>
                 <td class="text-center text-nowrap">@dr["Description"].ToString()</td>
                 <td class="text-center text-nowrap">@dr["AddedBy"].ToString()</td>
                 <td class="text-center text-nowrap">@dr["DateFwd"].ToString()</td>
                 <td class="text-center text-nowrap">@dr["DateRcv"].ToString()</td>
                 <td class="text-center text-nowrap">@dr["Name"].ToString()</td>
                 <td class="text-center text-nowrap">@dr["Status"].ToString()</td>
+                <td>
+                    <div class="modal fade" id="Clr_@dr["TaskId"]" tabindex="-1" aria-labelledby="ClrModalLabel_@dr["TaskId"]" aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h1 class="modal-title fs-5" id="ClrModalLabel_@dr["TaskId"]">Receive</h1>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal" onclick="closeSts('@dr["TaskId"]')" aria-label="Close"></button>
+                                </div>
+                                <form asp-controller="User" asp-action="Recieve" method="post">
+                                    <div class="modal-body">
+                                        <p>Are you sure you want to receive this?</p>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <input type="hidden" asp-for="SiteId" value="@dr["SiteId"].ToString()" />
+                                        <input type="hidden" asp-for="TaskId" value="@dr["TaskId"].ToString()"/>
+                                        <input type="hidden" asp-for="AssignId" value="@dr["AssignId"].ToString()"/>
+                                        <input type="hidden" asp-for="Task" value="@dr["Task"].ToString()"/>
+                                        <input type="hidden" asp-for="Details" value="@dr["Details"].ToString()"/>
+                                        <input type="hidden" asp-for="Circulation" value="@dr["Circulation"].ToString()"/>
+                                        <button type="submit" class="btn btn-outline-info">Confirm</button>
+                                        <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Close</button>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="d-flex justify-content-center">
+                        <button id="btnClr_@dr["TaskId"]" data-taskid="@dr["TaskId"]" type="button" class="btn btn-success" style="height: 25px; line-height: 12px; margin-right: 3px" data-bs-toggle="modal" data-bs-target="#Clr_@dr["TaskId"]">Recieve</button>
+                    </div>
+                </td>
         </tr>
         }
     </tbody>
 </table>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.7/umd/popper.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.15.2/js/selectize.min.js"></script>
